<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9BFFFFFF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/newTicket"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTintMode="multiply"
        android:text="@string/newTicket"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/showTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/showTime"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/showTime"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <Button
        android:id="@+id/editOrDelete"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/editOrDelete"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorHint="#000000"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTime" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="422dp"
        android:layout_height="219dp"
        android:contentDescription="@string/train_logo"
        app:layout_constraintBottom_toTopOf="@+id/newTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>