<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newTicket">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:inputType="date"

        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/to_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:background="@color/colorPrimary"
        android:text="@string/to_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textDirection="inherit"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/list_of_stations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/list_of_stations"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:entries="@array/stations"
        android:spinnerMode="dialog"
        android:touchscreenBlocksFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_text"
        app:layout_constraintBottom_toTopOf="@id/from_text"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/from_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/from_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textDirection="inherit"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/list_of_stations2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_of_stations" />

    <Spinner
        android:id="@+id/list_of_stations2"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:entries="@array/stations"
        android:spinnerMode="dialog"
        android:touchscreenBlocksFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/train_logo"
        app:layout_constraintBottom_toTopOf="@+id/to_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="222dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textOff="@string/goOnly"
        android:textOn="@string/goAndBack"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_of_stations2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton">

        <RadioButton
            android:id="@+id/radio_pirates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_class" />

        <RadioButton
            android:id="@+id/radio_ninjas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_class" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:ems="10"
        android:inputType="date"

        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="تاريخ المغادرة"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="تاريخ العودة"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:text="تم"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />


</androidx.constraintlayout.widget.ConstraintLayout>